added classes to the BEM portfolio. Moved styles to SASS.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Головна</title>
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -68,56 +68,56 @@
 
     <main>
         <!--section-hero-->
-        <section class="section hero">
+        <section class="section section__hero">
             <div class="container">
-                <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
+                <h1 class="section__hero-title">Ефективні рішення для вашого бізнесу</h1>
                 <button type="button" class="button" data-modal-open>Замовити послугу</button>
             </div>
 
         </section>
 
         <!--section-features-->
-        <section class="section features">
+        <section class="section section__features">
             <div class="container">
-                <h2 class="title-second title-second--hidden">Наші переваги</h2>
-                <ul class="features-list features-list__icon">
-                    <li class="features__icon">
+                <h2 class="section__title section__title--hidden">Наші переваги</h2>
+                <ul class="features-list features-list__margin">
+                    <li class="features-list__icon">
                         <svg width="70px" height="70px">
                             <use href="./images/icons.svg#icon-antenna"></use>
                         </svg>
                     </li>
-                    <li class="features__icon">
+                    <li class="features-list__icon">
                         <svg width="70px" height="70px">
                             <use href="./images/icons.svg#icon-clock"></use>
                         </svg>
                     </li>
-                    <li class="features__icon">
+                    <li class="features-list__icon">
                         <svg width="70px" height="70px">
                             <use href="./images/icons.svg#icon-diagram"></use>
                         </svg>
                     </li>
-                    <li class="features__icon">
+                    <li class="features-list__icon">
                         <svg width="70px" height="70px">
                             <use href="./images/icons.svg#icon-astronaut"></use>
                         </svg>
                     </li>
                 </ul>
                 <ul class="features-list">
-                    <li class="features__text">
-                        <h3 class="features__title">Увага до деталей</h3>
+                    <li class="features-list__text">
+                        <h3 class="features-list__title">Увага до деталей</h3>
                         <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
-                    <li class="features__text">
-                        <h3 class="features__title">Пунктуальність</h3>
+                    <li class="features-list__text">
+                        <h3 class="features-list__title">Пунктуальність</h3>
                         <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
-                    <li class="features__text">
-                        <h3 class="features__title">Планування</h3>
+                    <li class="features-list__text">
+                        <h3 class="features-list__title">Планування</h3>
                         <p>Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
 
-                    <li class="features__text">
-                        <h3 class="features__title">Сучасні технології</h3>
+                    <li class="features-list__text">
+                        <h3 class="features-list__title">Сучасні технології</h3>
                         <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li>
                 </ul>
@@ -126,31 +126,31 @@
         </section>
 
         <!--section activity-->
-        <section class="section activity">
+        <section class="section section__activity">
             <div class="container">
-                <h2 class="title-second">Чим ми займаємося</h2>
-                <ul class="activity__list">
-                    <li class="activity__img">
+                <h2 class="section__title">Чим ми займаємося</h2>
+                <ul class="activity-list">
+                    <li class="activity-list__img">
                         <img src="./images/img1.jpg" alt="людина програмує на комп'ютері" width="370">
-                        <p class="activity__text">Десктопні додатки</p>
+                        <p class="activity-list__text">Десктопні додатки</p>
 
                     </li>
-                    <li class="activity__img">
+                    <li class="activity-list__img">
                         <img src="./images/img2.jpg" alt="людина створює додатки до телефонів" width="370">
-                        <p class="activity__text">Мобільні додатки</p>
+                        <p class="activity-list__text">Мобільні додатки</p>
                     </li>
-                    <li class="activity__img">
+                    <li class="activity-list__img">
                         <img src="./images/img3.jpg" alt="людина вибирає кольори для веб-дизайну" width="370">
-                        <p class="activity__text">Дизайнерські рішення</p>
+                        <p class="activity-list__text">Дизайнерські рішення</p>
                     </li>
                 </ul>
             </div>
         </section>
         <!--section-team-->
-        <section class="section team">
+        <section class="section section__team">
             <div class="container">
-                <h2 class="title-second">Наша команда</h2>
-                <ul class="team__list">
+                <h2 class="section__title">Наша команда</h2>
+                <ul class="team-list">
 
                     <li class="team-card">
                         <img src="./images/img-team1.jpg" alt="Чоловік в окулярах та у коричевій сорочці" width="270">
@@ -279,7 +279,7 @@
         <!--clients-->
         <section class="section">
             <div class="container">
-                <h2 class="title-second">Постійні клієнти</h2>
+                <h2 class="section__title">Постійні клієнти</h2>
                 <ul class="clients-list">
                     <li> <a href="#" class="clients-list__link">
                             <svg width="106px" height="60px">
@@ -319,7 +319,7 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="footer__contact">
+            <div class="footer__box-contact">
                 <div>
                     <a class="logo" lang="en" href="./index.html"> <span class="logo__web">Web</span><span
                             class="logo__studio logo__studio--white">Studio</span> </a>
@@ -340,8 +340,8 @@
                     </address>
                 </div>
 
-                <div class="footer-net">
-                    <p class="footer-text">Приєднуйтесь</p>
+                <div class="footer__box-net">
+                    <p class="footer__text">Приєднуйтесь</p>
                     <ul class="footer-list">
                         <li><a href="#" class="footer-list__link">
                                 <svg class="footer-list__icon" width="20px" height="20px">
@@ -366,14 +366,14 @@
                     </ul>
                 </div>
 
-                <div class="footer-form">
+                <div class="form-mail">
                     <form name="form_email">
 
-                        <label class="footer-text" for="email">Підпишіться на розсилку</label>
-                        <div class="form-mail">
+                        <label class="form-mail__text" for="email">Підпишіться на розсилку</label>
+                        <div class="form-mail__box">
                             <input class="form-mail__field" id="email" type="email" name="email" placeholder="E-mail">
-                            <button type="submit" class="button button__form">Підписатися
-                                <svg class="button__icon" width="24px" height="24px">
+                            <button type="submit" class="button button-form">Підписатися
+                                <svg class="button-icon" width="24px" height="24px">
                                     <use href="./images/icons.svg#icon-send"></use>
                                 </svg>
                             </button>
@@ -386,10 +386,11 @@
             </div>
         </div>
     </footer>
-            <!--modal-->
-    <div class="backdrop is-hidden" data-modal>
-        <div class="modal">
-            <button class="button-close" data-modal-close> <svg class="button-close__icone" width="18px" height="18px">
+    <!--modal-->
+    <div class="modal-hero is-hidden" data-modal>
+        <div class="modal-hero__modal-box">
+            <button class="modal-hero__button-close" data-modal-close> <svg class="modal-hero__button-icone"
+                    width="18px" height="18px">
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg></button>
 
@@ -422,13 +423,13 @@
                     </div>
 
                     <label class="feedback__form-text" for="modal-comment">Коментар</label>
-                    <textarea class="feedback__comment"  id="modal-comment" name="feedback" placeholder="Введіть текст" >
-                    </textarea>
-                    <div class="box-agreement">
+                    <textarea class="feedback__comment" id="modal-comment" name="feedback"
+                        placeholder="Введіть текст"></textarea>
+                    <div class="agreement-box">
                         <label class="agreement" for="agreement">
                             <input type="checkbox" class="agreement__modal" name="agreement" id="agreement">
                             <span class="agreement__vector">
-                                <svg  width="16px" height="15px">
+                                <svg width="16px" height="15px">
                                     <use href="./images/icons.svg#icon-check"></use>
                                 </svg>
                             </span>
